cosmos/steamaudio-sys/src/bindings.rs

#[doc = " A serialized representation of an API object, like an \\c IPLScene or \\c IPLProbeBatch. Create an empty\nserialized object if you want to serialize an existing object to a byte array, or create a serialized\nobject that wraps an existing byte array if you want to deserialize it."]
pub type IPLSerializedObject = *mut _IPLSerializedObject_t;
#[doc = " Settings used to create a serialized object."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSerializedObjectSettings {
    #[doc = " If non-NULL, the serialized object will contain the data in this buffer. If NULL,\nthe serialized object will start out empty."]
    pub data: *mut IPLbyte,
    #[doc = " The number of bytes in the buffer pointed to by \\c data. Set to 0 if \\c data is\nNULL."]
    pub size: IPLsize,
}
extern "C" {
    #[doc = " Creates a serialized object.\n\n\\param  context             The context used to initialize Steam Audio.\n\\param  settings            The settings to use when creating the serialized object.\n\\param  serializedObject    [out] The created serialized object.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplSerializedObjectCreate(
        context: IPLContext,
        settings: *mut IPLSerializedObjectSettings,
        serializedObject: *mut IPLSerializedObject,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a serialized object.\n\n\\param  serializedObject    The serialized object to retain a reference to.\n\n\\return The additional reference to the serialized object."]
    pub fn iplSerializedObjectRetain(serializedObject: IPLSerializedObject) -> IPLSerializedObject;
}
extern "C" {
    #[doc = " Releases a reference to a serialized object.\n\n\\param  serializedObject    The serialized object to release a reference to."]
    pub fn iplSerializedObjectRelease(serializedObject: *mut IPLSerializedObject);
}
extern "C" {
    #[doc = " \\return The size in bytes of the serialized data contained in a serialized object.\n\n\\param  serializedObject    The serialized object."]
    pub fn iplSerializedObjectGetSize(serializedObject: IPLSerializedObject) -> IPLsize;
}
extern "C" {
    #[doc = " \\return A pointer to a byte array of serialized data contained in a serialized object.\n\n\\param  serializedObject    The serialized object."]
    pub fn iplSerializedObjectGetData(serializedObject: IPLSerializedObject) -> *mut IPLbyte;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLEmbreeDevice_t {
    _unused: [u8; 0],
}
#[doc = " Application-wide state for the Embree ray tracer. An Embree device must be created before using any of Steam\nAudio's Embree ray tracing functionality. In terms of the Embree API, this object encapsulates an\n\\c RTCDevice object."]
pub type IPLEmbreeDevice = *mut _IPLEmbreeDevice_t;
pub type IPLEmbreeDeviceSettings = ::std::os::raw::c_void;
extern "C" {
    #[doc = " Creates an Embree device.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  settings    The settings to use when creating the Embree device.\n\\param  device      [out] The created Embree device.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplEmbreeDeviceCreate(
        context: IPLContext,
        settings: *mut IPLEmbreeDeviceSettings,
        device: *mut IPLEmbreeDevice,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an Embree device.\n\n\\param  device  The Embree device to retain a reference to.\n\n\\return The additional reference to the Embree device."]
    pub fn iplEmbreeDeviceRetain(device: IPLEmbreeDevice) -> IPLEmbreeDevice;
}
extern "C" {
    #[doc = " Releases a reference to an Embree device.\n\n\\param  device  The Embree device to release a reference to."]
    pub fn iplEmbreeDeviceRelease(device: *mut IPLEmbreeDevice);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLOpenCLDeviceList_t {
    _unused: [u8; 0],
}
#[doc = " Provides a list of OpenCL devices available on the user's system. Use this to enumerate the available\nOpenCL devices, inspect their capabilities, and select the most suitable one for your application's needs."]
pub type IPLOpenCLDeviceList = *mut _IPLOpenCLDeviceList_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLOpenCLDevice_t {
    _unused: [u8; 0],
}
#[doc = " Application-wide state for OpenCL. An OpenCL device must be created before using any of Steam Audio's\nRadeon Rays or TrueAudio Next functionality. In terms of the OpenCL API, this object encapsulates a\n\\c cl_context object, along with up to 2 \\c cl_command_queue objects."]
pub type IPLOpenCLDevice = *mut _IPLOpenCLDevice_t;
#[doc = " List both CPU and GPU devices."]
pub const IPLOpenCLDeviceType_IPL_OPENCLDEVICETYPE_ANY: IPLOpenCLDeviceType = 0;
#[doc = " Only list CPU devices."]
pub const IPLOpenCLDeviceType_IPL_OPENCLDEVICETYPE_CPU: IPLOpenCLDeviceType = 1;
#[doc = " Only list GPU devices."]
pub const IPLOpenCLDeviceType_IPL_OPENCLDEVICETYPE_GPU: IPLOpenCLDeviceType = 2;
#[doc = " The type of devices to include when listing OpenCL devices."]
pub type IPLOpenCLDeviceType = ::std::os::raw::c_int;
#[doc = " Specifies requirements that an OpenCL device must meet in order to be considered when listing\nOpenCL devices."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLOpenCLDeviceSettings {
    #[doc = " The type of device. Set to \\c IPL_OPENCLDEVICETYPE_ANY to consider all available devices."]
    pub type_: IPLOpenCLDeviceType,
    #[doc = " The number of GPU compute units (CUs) that should be reserved for use by Steam Audio. If set to a\nnon-zero value, then a GPU will be included in the device list only if it can reserve at least\nthis many CUs. Set to 0 to indicate that Steam Audio can use the entire GPU, in which case all\navailable GPUs will be considered.\n\nIgnored if \\c type is \\c IPL_OPENCLDEVICETYPE_CPU."]
    pub numCUsToReserve: IPLint32,
    #[doc = " The fraction of reserved CUs that should be used for impulse response (IR) update. IR update\nincludes: a) ray tracing using Radeon Rays to simulate sound propagation, and/or b) pre-transformation\nof IRs for convolution using TrueAudio Next. Steam Audio will only list GPU devices that are able\nto subdivide the reserved CUs as per this value. The value must be between 0 and 1.\n\nFor example, if \\c numCUsToReserve is \\c 8, and \\c fractionCUsForIRUpdate is \\c 0.5f, then 4 CUs\nwill be used for IR update and 4 CUs will be used for convolution. Below are typical scenarios:\n\n-   Using only TrueAudio Next. Set \\c fractionCUsForIRUpdate to \\c 0.5f. This ensures that reserved\nCUs are available for IR update as well as convolution.\n\n-   Using TrueAudio Next and Radeon Rays for real-time simulation and rendering. Choosing\n\\c fractionCUsForIRUpdate may require some experimentation to utilize reserved CUs optimally. You\ncan start by setting \\c fractionCUsForIRUpdate to \\c 0.5f. However, if IR calculation has high\nlatency with these settings, increase \\c fractionCUsForIRUpdate to use more CUs for ray tracing.\n\n-   Using only Radeon Rays. Set \\c fractionCUsForIRUpdate to \\c 1, to make sure all the reserved CUs\nare used for ray tracing. If using Steam Audio for preprocessing (e.g. baking reverb), then\nconsider setting \\c numCUsToReserve to \\c 0 to use the entire GPU for accelerated ray tracing.\n\nIgnored if \\c type is \\c IPL_OPENCLDEVICETYPE_CPU or \\c numCUsToReserve is \\c 0."]
    pub fractionCUsForIRUpdate: IPLfloat32,
    #[doc = " If \\c IPL_TRUE, then the GPU device must support TrueAudio Next. It is not necessary to set this\nto \\c IPL_TRUE if \\c numCUsToReserve or \\c fractionCUsForIRUpdate are set to non-zero values."]
    pub requiresTAN: IPLbool,
}
#[doc = " Describes the properties of an OpenCL device. This information can be used to select the most suitable\ndevice for your application."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLOpenCLDeviceDesc {
    #[doc = " The OpenCL platform id. Can be cast to \\c cl_platform_id."]
    pub platform: *mut ::std::os::raw::c_void,
    #[doc = " The OpenCL platform name."]
    pub platformName: IPLstring,
    #[doc = " The OpenCL platform vendor's name."]
    pub platformVendor: IPLstring,
    #[doc = " The OpenCL platform version."]
    pub platformVersion: IPLstring,
    #[doc = " The OpenCL device id. Can be cast to \\c cl_device_id."]
    pub device: *mut ::std::os::raw::c_void,
    #[doc = " The OpenCL device name."]
    pub deviceName: IPLstring,
    #[doc = " The OpenCL device vendor's name."]
    pub deviceVendor: IPLstring,
    #[doc = " The OpenCL device version."]
    pub deviceVersion: IPLstring,
    #[doc = " The type of OpenCL device."]
    pub type_: IPLOpenCLDeviceType,
    #[doc = " The number of CUs reserved for convolution. May be \\c 0 if CU reservation is not supported."]
    pub numConvolutionCUs: IPLint32,
    #[doc = " The number of CUs reserved for IR update. May be \\c 0 if CU reservation is not supported."]
    pub numIRUpdateCUs: IPLint32,
    #[doc = " The CU reservation granularity. CUs can only be reserved on this device in multiples of this number."]
    pub granularity: IPLint32,
    #[doc = " A relative performance score of a single CU of this device. Only applicable to supported AMD GPUs."]
    pub perfScore: IPLfloat32,
}
extern "C" {
    #[doc = " Creates an OpenCL device list. This involves listing all available OpenCL devices on the user's system.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  settings    The requirements that all listed OpenCL devices must satisfy.\n\\param  deviceList  [out] The created OpenCL device list.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplOpenCLDeviceListCreate(
        context: IPLContext,
        settings: *mut IPLOpenCLDeviceSettings,
        deviceList: *mut IPLOpenCLDeviceList,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an OpenCL device list.\n\n\\param  deviceList  The OpenCL device list to retain a reference to.\n\n\\return The additional reference to the OpenCL device list."]
    pub fn iplOpenCLDeviceListRetain(deviceList: IPLOpenCLDeviceList) -> IPLOpenCLDeviceList;
}
extern "C" {
    #[doc = " Releases a reference to an OpenCL device list.\n\n\\param  deviceList  The OpenCL device list to release a reference to."]
    pub fn iplOpenCLDeviceListRelease(deviceList: *mut IPLOpenCLDeviceList);
}
extern "C" {
    #[doc = " \\return The number of devices in an OpenCL device list.\n\n\\param  deviceList  The OpenCL device list."]
    pub fn iplOpenCLDeviceListGetNumDevices(deviceList: IPLOpenCLDeviceList) -> IPLint32;
}
extern "C" {
    #[doc = " Retrieves information about a specific device in an OpenCL device list.\n\n\\param  deviceList  The OpenCL device list.\n\\param  index       The index of the device within the list.\n\\param  deviceDesc  [out] A descriptor for the properties of the specified OpenCL device."]
    pub fn iplOpenCLDeviceListGetDeviceDesc(
        deviceList: IPLOpenCLDeviceList,
        index: IPLint32,
        deviceDesc: *mut IPLOpenCLDeviceDesc,
    );
}
extern "C" {
    #[doc = " Creates an OpenCL device. The device is specified as an index into an OpenCL device list.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  deviceList  The OpenCL device list.\n\\param  index       The index of the device within the list.\n\\param  device      [out] The created OpenCL device.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplOpenCLDeviceCreate(
        context: IPLContext,
        deviceList: IPLOpenCLDeviceList,
        index: IPLint32,
        device: *mut IPLOpenCLDevice,
    ) -> IPLerror;
}
